<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="71dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Open"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="240dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="59dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/Ctrl_Open"
                android:textColor="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/Ctrl_Save"
                android:textColor="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Save_As"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ctrl_Save_As"
                android:textColor="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view4"
                android:layout_width="59dp"
                android:layout_height="1dp"
                android:background="#696969" />

            <View
                android:id="@+id/view5"
                android:layout_width="208dp"
                android:layout_height="1dp"
                android:background="#696969" />

            <View
                android:id="@+id/view6"
                android:layout_width="59dp"
                android:layout_height="1dp"
                android:background="#696969" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Import"
                android:textColor="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Export"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/Ctrl_Export"
                android:textColor="@android:color/background_light" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view7"
                android:layout_width="59dp"
                android:layout_height="1dp"
                android:background="#696969" />

            <View
                android:id="@+id/view8"
                android:layout_width="208dp"
                android:layout_height="1dp"
                android:background="#696969" />

            <View
                android:id="@+id/view9"
                android:layout_width="59dp"
                android:layout_height="1dp"
                android:background="#696969" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quit"
                android:textColor="@android:color/background_light" />
        </TableRow>


    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>